Refactor API files for Vercel Edge deployment
- Convert api/cx/*.js files to pure JavaScript (remove TypeScript syntax)
- Update function signatures to Edge-compatible format
- Replace NextResponse with Web Response API
- Add graceful handling for missing environment variables
- Fix Tailwind content globs to avoid node_modules warnings
- Add lint:edge script to detect TypeScript in JS files
- Create test scripts for API endpoints
- Update import paths to use .ts extensions

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "lint:edge": "grep -R \"\\:\\s*[A-Z][A-Za-z0-9_<>]*\\s*[=)]\" api/**/*.js && echo 'TS in JS found' && exit 1 || echo 'OK'",
     "preview": "vite preview"
   },
   "dependencies": {
