--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.263.1",
+    "pdf-parse": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^3.2.1",
