--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.263.1",
     "pdf-parse": "^2.2.2",
     "react": "^18.2.0",
