--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run dev:api\" \"npm run dev:frontend\"",
-    "dev:frontend": "vite",
-    "dev:api": "node server.js",
+    "dev": "vite",
+    "dev:server": "node server.js",
+    "dev:all": "concurrently \"npm run dev:server\" \"npm run dev\"",
     "build": "vite build",
     "lint": "eslint .",
     "lint:edge": "grep -R \"\\:\\s*[A-Z][A-Za-z0-9_<>]*\\s*[=)]\" api/**/*.js && echo 'TS in JS found' && exit 1 || echo 'OK'",
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.263.1",
+    "multer": "^2.0.2",
+    "openai": "^6.8.1",
     "pdf-parse": "^2.2.2",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "recharts": "^3.2.1",
     "zod": "^3.22.4"
@@ -27,13 +33,10 @@
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "concurrently": "^9.2.1",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "express": "^5.1.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
